--- a/paginas/servicios.html
+++ b/paginas/servicios.html
@@ -4,70 +4,98 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>R&Asociados</title>
+    <!-- bs -->
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-sRIl4kxILFvY47J16cr9ZwB07vP4J8+LH7qKQnuqkuIAvNWLzeN8tE5YBujZqJLB" crossorigin="anonymous">
+    <!--link css-->
     <link rel="stylesheet" href="../css/style.css">
 </head>
 <body>
     <header>
-        <a href="../index.html"><img src="../recursos/iconos_logos/logo_arqui_curso.png" height="100" width="100" alt=""></a>
-        <nav>
-            <ul>
-                <li><a href="./proyectos.html">Proyectos</a></li>
-                <li><a href="#">Servicios</a></li>
-                <li><a href="./contacto.html">Contactos</a></li>
-            </ul>
+        <nav class="navbar navbar-expand-lg fondo-nav">
+    <div class="container-fluid">
+        <a class="navbar-brand" href="../index.html"><img class="logo" src="../recursos/iconos_logos/logo_arqui_curso.png" alt=""></a>
+        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse justify-content-end" id="navbarNav">
+        <ul class="navbar-nav">
+            <li class="nav-item">
+                <a class="nav-link" href="./proyectos.html">Proyectos</a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link" href="#">Servicios</a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link" href="./contacto.html">Contactanos</a>
+            </li>
+        </ul>
+        </div>
+    </div>
         </nav>
     </header>
-    <main>
-        <section>
-            <h1>Servicios que Ofrecemos</h1>
-            <img src="../recursos/imagenes/trabajadores.jpg" height="600" width="400" alt="">
+    <main class="servicios">
+        <h1 class="titulo-principal">Servicios que Ofrecemos</h1>
+        <section class="servicios-layout">
+                <div class="servicios-lista">
+                    <article class="servicio">
+                        <h2>Diseño Arquitectónico a Medida</h2>
+                        <p>Convertimos tus ideas en proyectos únicos. Diseñamos hogares, locales y espacios que no solo se ven increíbles, sino que también se sienten cómodos, funcionales y totalmente adaptados a tu estilo de vida.</p>
+                    </article>
+                    <article class="servicio">
+                        <h2>Remodelaciones que Transforman</h2>
+                        <p>¿Querés renovar tu cocina, tu baño o toda tu casa? Nosotros lo hacemos posible. Modernizamos tus espacios para que se vean actuales, prácticos y con un diseño que marca la diferencia.</p>
+                    </article>
+                    <article class="servicio">
+                        <h2>Diseño de Interiores</h2>
+                        <p>Creamos ambientes que inspiran. Te ayudamos a elegir colores, materiales, iluminación y mobiliario para lograr espacios armónicos, elegantes y llenos de personalidad.</p>
+                    </article>
+                    <article class="servicio">
+                        <h2>Dirección y Gestión de Obra</h2>
+                        <p>Olvidate de las preocupaciones. Nos encargamos de coordinar cada etapa del proyecto para que tu obra se realice con calidad, dentro de los tiempos y respetando el presupuesto.</p>
+                    </article>
+                    <article class="servicio">
+                        <h2>Renders 3D Realistas</h2>
+                        <p>Antes de construir, te mostramos cómo va a quedar. Con nuestras visualizaciones hiperrealistas vas a poder tomar decisiones con confianza y enamorarte de tu proyecto antes de verlo hecho realidad.</p>
+                    </article>
+                    <article class="servicio">
+                        <h2>Asesoramiento Personalizado</h2>
+                        <p>Cada proyecto es único, por eso trabajamos a tu lado en todo momento. Te guiamos desde la primera idea hasta el último detalle, asegurándonos de que el resultado supere tus expectativas.</p>
+                    </article>
+                </div>
+                <div class="servicios-imagen">
+                <img src="../recursos/imagenes/trabajadores.jpg" alt="Equipo de arquitectos trabajando">
+                </div>
         </section>
-        <section>    
-            <h2>Diseño Arquitectónico a Medida</h2>
-            <p>Convertimos tus ideas en proyectos únicos. Diseñamos hogares, locales y espacios que no solo se ven increíbles, sino que también se sienten cómodos, funcionales y totalmente adaptados a tu estilo de vida.</p>
+        <section class="servicios-final">
+            <h3>"Nuestro objetivo no es solo diseñar, sino crear experiencias y espacios donde quieras vivir, trabajar y disfrutar."</h3>
         </section>
-        <section>    
-            <h2>Remodelaciones que Transforman</h2>
-            <p>¿Querés renovar tu cocina, tu baño o toda tu casa? Nosotros lo hacemos posible. Modernizamos tus espacios para que se vean actuales, prácticos y con un diseño que marca la diferencia.</p>
-        </section>
-        <section>    
-            <h2>Diseño de Interiores</h2>
-            <p>Creamos ambientes que inspiran. Te ayudamos a elegir colores, materiales, iluminación y mobiliario para lograr espacios armónicos, elegantes y llenos de personalidad.</p>
-        </section>
-        <section>    
-            <h2>Dirección y Gestión de Obra</h2>
-            <p>Olvidate de las preocupaciones. Nos encargamos de coordinar cada etapa del proyecto para que tu obra se realice con calidad, dentro de los tiempos y respetando el presupuesto.</p>
-        </section>
-        <section>    
-            <h2>Renders 3D Realistas</h2>
-            <p>Antes de construir, te mostramos cómo va a quedar. Con nuestras visualizaciones hiperrealistas vas a poder tomar decisiones con confianza y enamorarte de tu proyecto antes de verlo hecho realidad.</p>
-        </section>
-        <section>    
-            <h2>Asesoramiento Personalizado</h2>
-            <p>Cada proyecto es único, por eso trabajamos a tu lado en todo momento. Te guiamos desde la primera idea hasta el último detalle, asegurándonos de que el resultado supere tus expectativas.</p>
-        </section>
-        <h3>Nuestro objetivo no es solo diseñar, sino crear experiencias y espacios donde quieras vivir, trabajar y disfrutar.</h3>
     </main>
     <footer>
-        <div class="suscripcion">
-            <form action="/subscribe" method="post">
-                <fieldset>
-                    <legend>Subscribete para mas novedades</legend>
-                    <input type="email" name="email" placeholder="ejemplo@gmail.com">
-                    <button>Enviar</button>
-                </fieldset>
-            </form>
-        </div>
-        <div class="whatsapp">
-            <a href="https://wa.me/1125041027" target="_blank"> <img class="dimensionesIcono" src="../recursos/iconos_logos/icon_whatsapp.png" ></a>
-        </div>
-        <div class="border-map">
-            <iframe class="mapa" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d13133.337016595504!2d-58.42875065!3d-34.620992550000004!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x95bccbca5a8723ad%3A0x841c1c80b44698b1!2sCinemark!5e0!3m2!1ses-419!2sar!4v1757367585363!5m2!1ses-419!2sar" ></iframe>
-        </div>
-        <div class="direccion">
-            <p>Av. La Plata 3763, Barrio Boedo. Capital Federal</p>
+        <div class="container-footer">
+            <div class="suscripcion">
+                <form action="/subscribe" method="post">
+                    <fieldset>
+                        <legend>Subscribete para mas novedades</legend>
+                        <input type="email" name="email" placeholder="ejemplo@gmail.com">
+                        <button>Enviar</button>
+                    </fieldset>
+                </form>
+            </div>
+            <div class="container-map">
+                <div class="border-map">
+                    <iframe class="mapa" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d13133.337016595504!2d-58.42875065!3d-34.620992550000004!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x95bccbca5a8723ad%3A0x841c1c80b44698b1!2sCinemark!5e0!3m2!1ses-419!2sar!4v1757367585363!5m2!1ses-419!2sar" ></iframe>
+                </div>
+                <div class="direccion">
+                    <p>Av. La Plata 3763, Barrio Boedo. Capital Federal</p>
+                </div>
+            </div>
         </div>
         <p class="pie">&copy; 2025 R&Asociados. Todos los derechos reservados.</p>
     </footer>
+        <div class="whatsapp">
+            <a href="https://wa.me/1125041027" target="_blank"> <img class="dimensionesIcono" src="../recursos/iconos_logos/icon_whatsapp.png" ></a>
+        </div>
+    <!--js bs-->
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/js/bootstrap.bundle.min.js" integrity="sha384-FKyoEForCGlyvwx9Hj09JcYn3nv7wiPVlz7YYwJrWVcXK/BmnVDxM+D2scQbITxI" crossorigin="anonymous"></script>
 </body>
 </html>
