--- a/paginas/proyectos.html
+++ b/paginas/proyectos.html
@@ -6,8 +6,8 @@
     <title>R&Asociados</title>
     <!-- bs -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-sRIl4kxILFvY47J16cr9ZwB07vP4J8+LH7qKQnuqkuIAvNWLzeN8tE5YBujZqJLB" crossorigin="anonymous">
-    <!--link css-->
-    <link rel="stylesheet" href="../css/style.css">
+    <!--link SASS-->
+    <link rel="stylesheet" href="../css/main.css">
 </head>
 <body>
     <header>
@@ -34,47 +34,47 @@
         </nav>
     </header>
     <main>
-    <div class="titulonuestrosproyectos">
-        <h1>Nuestros Proyectos</h1>
-    </div>
-    <div class="row row-cols-1 row-cols-md-2 row-cols-lg-4 g-3 cards-ajustadas">
-        <div class="col">
-            <div class="card h-100">
-                <img src="../recursos/imagenes/casa3.jpeg" class="card-img-top" alt="">
-                <div class="card-body">
-                    <h3 class="card-title">Casa Moderna en Buenos Aires</h3>
-                    <p class="card-text">Proyecto de vivienda unifamiliar con diseño minimalista y sustentable.</p>
+        <div class="titulonuestrosproyectos">
+            <h1>Nuestros Proyectos</h1>
+        </div>
+        <div class="row row-cols-1 row-cols-md-2 row-cols-lg-4 g-3">
+            <div class="col">
+                <div class="card h-100">
+                    <img src="../recursos/imagenes/casa3.jpeg" class="card-img-top" alt="">
+                    <div class="card-body">
+                        <h3 class="card-title">Casa Moderna en Buenos Aires</h3>
+                        <p class="card-text">Proyecto de vivienda unifamiliar con diseño minimalista y sustentable.</p>
+                    </div>
+                </div>
+            </div>
+            <div class="col">
+                <div class="card h-100">
+                    <img src="../recursos/imagenes/casa2.jpeg" class="card-img-top" alt="">
+                    <div class="card-body">
+                        <h3 class="card-title">Casa de Campo en Córdoba</h3>
+                        <p class="card-text">Diseño rústico con integración al paisaje natural.</p>
+                    </div>
+                </div>
+            </div>
+            <div class="col">
+                <div class="card h-100">
+                    <img src="../recursos/imagenes/cocina.jpeg" class="card-img-top" alt="">
+                    <div class="card-body">
+                        <h3 class="card-title">Cocina Minimalista Blanca</h3>
+                        <p class="card-text">Espacio funcional con acabados modernos y máxima luminosidad</p>
+                    </div>
+                </div>
+            </div>
+            <div class="col">
+                <div class="card h-100">
+                    <img src="../recursos/imagenes/baño.jpeg" class="card-img-top" alt="">
+                    <div class="card-body">
+                        <h3 class="card-title">Baño de Mármol y Madera</h3>
+                        <p class="card-text">Diseño cálido y elegante combinando materiales nobles.</p>
+                    </div>
                 </div>
             </div>
         </div>
-        <div class="col">
-            <div class="card h-100">
-                <img src="../recursos/imagenes/casa2.jpeg" class="card-img-top" alt="">
-                <div class="card-body">
-                    <h3 class="card-title">Casa de Campo en Córdoba</h3>
-                    <p class="card-text">Diseño rústico con integración al paisaje natural.</p>
-                </div>
-            </div>
-        </div>
-        <div class="col">
-            <div class="card h-100">
-                <img src="../recursos/imagenes/cocina.jpeg" class="card-img-top" alt="">
-                <div class="card-body">
-                    <h3 class="card-title">Cocina Minimalista Blanca</h3>
-                    <p class="card-text">Espacio funcional con acabados modernos y máxima luminosidad</p>
-                </div>
-            </div>
-        </div>
-        <div class="col">
-            <div class="card h-100">
-                <img src="../recursos/imagenes/baño.jpeg" class="card-img-top" alt="">
-                <div class="card-body">
-                    <h3 class="card-title">Baño de Mármol y Madera</h3>
-                    <p class="card-text">Diseño cálido y elegante combinando materiales nobles.</p>
-                </div>
-            </div>
-        </div>
-    </div>
     </main>
     <footer>
         <div class="container-footer">
