--- a/paginas/contacto.html
+++ b/paginas/contacto.html
@@ -6,8 +6,8 @@
     <title>R&Asociados</title>
     <!-- bs -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-sRIl4kxILFvY47J16cr9ZwB07vP4J8+LH7qKQnuqkuIAvNWLzeN8tE5YBujZqJLB" crossorigin="anonymous">
-    <!--link css-->
-    <link rel="stylesheet" href="../css/style.css">
+    <!--link SASS-->
+    <link rel="stylesheet" href="../css/main.css">
 </head>
 <body>
     <header>
@@ -41,46 +41,46 @@
                     <p>Completá el formulario y te responderemos a la brevedad con una propuesta adaptada a tus necesidades.</p>
                 </div>
                 <form class="formulario" action="/signup" method="post">
-                <div class="form-grupo">
-                    <label for="nombre">Nombre</label>
-                    <input type="text" id="nombre" name="first_name" placeholder="Tu nombre completo" required>
-                </div>
-                <div class="form-grupo">
-                    <label for="email">Email</label>
-                    <input type="email" id="email" name="email" placeholder="ejemplo@mail.com" required>
-                </div>
-                <div class="form-grupo">
-                    <label for="telefono">Número Telefónico</label>
-                    <input type="tel" id="telefono" name="phone" placeholder="+54 9 11 1234-5678">
-                </div>
-                <div class="form-grupo">
-                    <label for="mensaje">Consulta</label>
-                    <textarea id="mensaje" name="mensaje" placeholder="Contanos tu idea o proyecto..." rows="5"></textarea>
-                </div>
-                <fieldset class="form-radio">
-                    <legend>Sexo</legend>
-                    <label><input type="radio" name="title" value="mr"> Masculino</label>
-                    <label><input type="radio" name="title" value="mrs"> Femenino</label>
-                    <label><input type="radio" name="title" value="miss"> Otro</label>
-                </fieldset>
-                <div class="form-grupo">
-                    <label for="pais">País</label>
-                    <select id="pais" name="pais">
-                    <option value="">Selecciona un país</option>
-                    <option>Argentina</option>
-                    <option>Chile</option>
-                    <option>Colombia</option>
-                    <option>México</option>
-                    <option>Uruguay</option>
-                    </select>
-                </div>
-                <div class="form-check">
-                    <label>
-                    <input type="checkbox" required>
-                    Acepto los <a href="/terms" target="_blank">Términos y Condiciones</a>
-                    </label>
-                </div>
-                <button type="submit" class="btn-enviar">Enviar</button>
+                    <div class="form-grupo">
+                        <label for="nombre">Nombre</label>
+                        <input type="text" id="nombre" name="first_name" placeholder="Tu nombre completo" required>
+                    </div>
+                    <div class="form-grupo">
+                        <label for="email">Email</label>
+                        <input type="email" id="email" name="email" placeholder="ejemplo@mail.com" required>
+                    </div>
+                    <div class="form-grupo">
+                        <label for="telefono">Número Telefónico</label>
+                        <input type="tel" id="telefono" name="phone" placeholder="+54 9 11 1234-5678">
+                    </div>
+                    <div class="form-grupo">
+                        <label for="mensaje">Consulta</label>
+                        <textarea id="mensaje" name="mensaje" placeholder="Contanos tu idea o proyecto..." rows="5"></textarea>
+                    </div>
+                    <fieldset class="form-radio">
+                        <legend>Sexo</legend>
+                        <label><input type="radio" name="title" value="mr"> Masculino</label>
+                        <label><input type="radio" name="title" value="mrs"> Femenino</label>
+                        <label><input type="radio" name="title" value="miss"> Otro</label>
+                    </fieldset>
+                    <div class="form-grupo">
+                        <label for="pais">País</label>
+                        <select id="pais" name="pais">
+                        <option value="">Selecciona un país</option>
+                        <option>Argentina</option>
+                        <option>Chile</option>
+                        <option>Colombia</option>
+                        <option>México</option>
+                        <option>Uruguay</option>
+                        </select>
+                    </div>
+                    <div class="form-check">
+                        <label>
+                            <input type="checkbox" required>
+                            Acepto los <a href="/terms" target="_blank">Términos y Condiciones</a>
+                        </label>
+                    </div>
+                    <button type="submit" class="btn-enviar">Enviar</button>
                 </form>
             </div>
         </section>
