--- a/paginas/servicios.html
+++ b/paginas/servicios.html
@@ -6,8 +6,8 @@
     <title>R&Asociados</title>
     <!-- bs -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-sRIl4kxILFvY47J16cr9ZwB07vP4J8+LH7qKQnuqkuIAvNWLzeN8tE5YBujZqJLB" crossorigin="anonymous">
-    <!--link css-->
-    <link rel="stylesheet" href="../css/style.css">
+    <!--link SASS-->
+    <link rel="stylesheet" href="../css/main.css">
 </head>
 <body>
     <header>
@@ -63,7 +63,7 @@
                     </article>
                 </div>
                 <div class="servicios-imagen">
-                <img src="../recursos/imagenes/trabajadores.jpg" alt="Equipo de arquitectos trabajando">
+                    <img src="../recursos/imagenes/trabajadores.jpg" alt="Equipo de arquitectos trabajando">
                 </div>
         </section>
         <section class="servicios-final">
