media query tablet completa y ultimos detalles

--- a/paginas/servicios.html
+++ b/paginas/servicios.html
@@ -3,7 +3,16 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+
+    <meta name="description" content="Ofrecemos servicios de arquitectura, diseño de interiores 
+    y consultoría creativa. Propuestas personalizadas para crear espacios y experiencias que inspiran.">
+    
+    <meta name="keywords" content="servicios arquitectura, diseño de interiores, consultoría diseño, 
+    renders, reformas">
+    
     <title>R&Asociados</title>
+    <link rel="icon" type="image/png" href="../recursos/iconos_logos/favicon-32x32.png">
     <!-- bs -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-sRIl4kxILFvY47J16cr9ZwB07vP4J8+LH7qKQnuqkuIAvNWLzeN8tE5YBujZqJLB" crossorigin="anonymous">
     <!--link SASS-->
@@ -13,17 +22,20 @@
     <header>
         <nav class="navbar navbar-expand-lg fondo-nav">
     <div class="container-fluid">
-        <a class="navbar-brand" href="../index.html"><img class="logo" src="../recursos/iconos_logos/logo_arqui_curso.png" alt=""></a>
+        <a class="navbar-brand" href="../index.html"><img class="logo" src="../recursos/iconos_logos/logo_arqui_curso.jpg" alt=""></a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
         </button>
         <div class="collapse navbar-collapse justify-content-end" id="navbarNav">
         <ul class="navbar-nav">
             <li class="nav-item">
+                <a class="nav-link" href="../index.html">Home</a>
+            </li>
+            <li class="nav-item">
                 <a class="nav-link" href="./proyectos.html">Proyectos</a>
             </li>
             <li class="nav-item">
-                <a class="nav-link" href="#">Servicios</a>
+                <a class="nav-link active" href="#">Servicios</a>
             </li>
             <li class="nav-item">
                 <a class="nav-link" href="./contacto.html">Contactanos</a>
