--- a/index.html
+++ b/index.html
@@ -3,7 +3,15 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+
+    <meta name="description" content="Diseño especializado en proyectos creativos, remodelaciones, y desarrollo visual de espacios modernos. 
+    Transformamos ideas en experiencias únicas.">
+    
+    <meta name="keywords" content="arquitectura, diseño, remodelación, estudio de arquitectura, diseño digital, creatividad, interiorismo, diseño gráfico, proyectos arquitectónicos, obras">
+    
     <title>R&Asociados</title>
+    <link rel="icon" type="image/png" href="./recursos/iconos_logos/favicon-32x32.png">
     <!-- bs -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-sRIl4kxILFvY47J16cr9ZwB07vP4J8+LH7qKQnuqkuIAvNWLzeN8tE5YBujZqJLB" crossorigin="anonymous">
     <!--link SASS-->
@@ -13,20 +21,23 @@
     <header>
         <nav class="navbar navbar-expand-lg fondo-nav">
             <div class="container-fluid">
-                <a class="navbar-brand" href="./index.html"><img class="logo" src="./recursos/iconos_logos/logo_arqui_curso.png" alt=""></a>
+                <a class="navbar-brand" href="./index.html"><img class="logo" src="./recursos/iconos_logos/logo_arqui_curso.jpg" alt=""></a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
                 </button>
                 <div class="collapse navbar-collapse justify-content-end" id="navbarNav">
                     <ul class="navbar-nav">
                         <li class="nav-item">
-                            <a class="nav-link" href="./paginas/proyectos.html">Proyectos</a>
+                            <a class="nav-link " href="#">Home</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="./paginas/servicios.html">Servicios</a>
+                            <a class="nav-link " href="./paginas/proyectos.html">Proyectos</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="./paginas/contacto.html">Contactanos</a>
+                            <a class="nav-link " href="./paginas/servicios.html">Servicios</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link " href="./paginas/contacto.html">Contactanos</a>
                         </li>
                     </ul>
                 </div>
@@ -47,9 +58,9 @@
             <div class="text-container">
                 <h2>De la mano con un gran grupo de Profesionales</h2>
                 <p>Somos Rosvery y Norma un par de Arquitectas donde los años de Experiencias
-                y la inovacion actual van a la par, nos encagamos desde el anteproyecto con Renders
+                y la innovacion actual van a la par, nos encargamos desde el anteproyecto con Renders
                 realistas, hasta la Direccion y Ejecucion de Obra, Con nuestro fiel Equipo de Profesionales
-                el hacer Reformas, Hogares desde cero, pintureria, resolucion de problemas en Obra
+                al hacer reformas, hogares desde cero, pintureria, resolucion de problemas en Obra
                 y mucho mas, sera nuestro pan de cada dia, para que habites tu lugar soñado.</p>
             </div>
         </section>
